initial commit for header
- adjusts git ignore file
- adds first draft for header
- adds front for navigation
- adds project colors

--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -1,1 +1,9 @@
 /* below the fold CSS goes here */
+
+@font-face{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: 500;
+    src: url("../fonts/Raleway-Medium.ttf") format("ttf");
+    font-display: swap;
+}
