--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,32 @@
 /* tmp header layout */
+header.header-wrapper {
+  background-image: linear-gradient(173deg, rgb(153 131 181 / 50%) 0%,
+                                            rgb(131 140 181 / 50%) 6%,
+                                            rgb(255 255 255 / 0%) 30%);
+  background-color: white;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  height: 80px;
+  padding: 0 20px;
+}
+
 header .header {
+  align-items: center;
   display: flex;
-  margin: auto;
+  height: 80px;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1280px;
+}
+
+/* todo: replace temporary fix by js solution */
+header .header div:empty {
+  display: none;
 }
 
 header .logo {
   display: block;
   width: 256px;
-  margin: auto 20px;
 }
 
 header .logo img {
@@ -16,17 +35,43 @@ header .logo img {
 
 header .links {
   display: flex;
+  gap: 40px;
   list-style: none;
-  gap: 2;
+  margin: 0;
+  padding: 0;
 }
 
-header .links li {
-  margin: 10px;
+header .links li {}
+
+header .links a {
+  color: var(--col-3);
+  font-family: var(--navigation-font-family);
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.8px;
+  line-height: 22px;
+  text-decoration: none;
+  transition: color 300ms ease;
+}
+
+header .links a:hover {
+  color: var(--col-2);
+  transition: color 100ms ease;
 }
 
 header .nav-hamburger {
   display: none;
   visibility: hidden;
+}
+
+@media (min-width: 1024px) {
+  header.header-wrapper {
+    height: 120px;
+  }
+
+  header .header {
+    height: 120px;
+  }
 }
 /* end tmp header layout */
 
