--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,3 +12,17 @@ footer .footer {
 footer .footer p {
   margin: 0;
 }
+
+footer .icon-logo_black svg {
+  width: 220px;
+  height: auto;
+}
+
+.footer > div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.footer > div > div:nth-child(3){
+  grid-column: 1 / -1;
+}
