--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,8 @@
   --body-font-size-m: 22px;
   --body-font-size-s: 18px;
   --body-font-size-xs: 16px;
+  --body-font-size-2xs: 15px;
+  --body-font-size-3xs: 14px;
 
   /* heading sizes */
   --heading-font-size-xxl: 48px;
